--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -5,7 +5,6 @@
   left: 0px;
   top: 0px;
   justify-content: center;
-  width: 100vw;
   min-width: 240px;
   height: 100vh;
   padding: 48px 0;
@@ -13,6 +12,7 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: all;
+  width: 100%;
 
   overflow: auto;
 
